--- a/RegexAnalyzer/Analyzer1/Analyzer1.Vsix/ToolWindow1Control.xaml
+++ b/RegexAnalyzer/Analyzer1/Analyzer1.Vsix/ToolWindow1Control.xaml
@@ -13,7 +13,20 @@
         <StackPanel Orientation="Vertical">
             <TextBlock Margin="10" HorizontalAlignment="Center">ToolWindow1</TextBlock>
             <Button Content="Click me!" Click="button1_Click" Width="120" Height="80" Name="button1"/>
-            <ListBox />
+            <ListBox x:Name="listBox" Height="100">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="0,2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="100" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding text}" />
+                            
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </StackPanel>
     </Grid>
 </UserControl>
