--- a/RegexAnalyzer/Analyzer1/Analyzer1.Vsix/ToolWindow1Control.xaml
+++ b/RegexAnalyzer/Analyzer1/Analyzer1.Vsix/ToolWindow1Control.xaml
@@ -8,12 +8,11 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              Name="MyToDoList">
-
+    
     <Grid>
         <StackPanel Orientation="Vertical">
-            <TextBlock Margin="10" HorizontalAlignment="Center">Tool</TextBlock>
-            <Button Content="Click me!" Click="button1_Click" Height="37" x:Name="button1" Margin="90,0"/>
-            <Button Content="Click me!" Click="button2_Click" Height="37" x:Name="button2" Margin="90,0"/>
+            <TextBlock Margin="10" HorizontalAlignment="Center">ToolWindow1</TextBlock>
+            <Button Content="Click me!" Click="button1_Click" Width="120" Height="80" Name="button1"/>
             <ListBox x:Name="listBox" Height="100">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
@@ -23,6 +22,7 @@
                                 <ColumnDefinition Width="100" />
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="{Binding text}" />
+                            
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
